--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -48,6 +48,43 @@
 
 	</div>
 
+
+
+
+	<table class="table">
+		<thead>
+		<tr>
+			<th scope="col">Client#</th>
+			<th scope="col">ClientName</th>
+			<th scope="col">AutoPolicyNumber</th>
+			<th scope="col">Carmake</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<th scope="row">1</th>
+			<td>Mark</td>
+			<td>Otto</td>
+			<td>@mdo</td>
+		</tr>
+		<tr>
+			<th scope="row">2</th>
+			<td>Jacob</td>
+			<td>Thornton</td>
+			<td>@fat</td>
+		</tr>
+		<tr>
+			<th scope="row">3</th>
+			<td>Larry</td>
+			<td>the Bird</td>
+			<td>@twitter</td>
+		</tr>
+		</tbody>
+	</table>
+
+
+
+
 </div>
 
 <div class="container">
