- Updated Insert logic for data consistency.
Correct order of input for inserting persistent data is :
user - > address -> accident listing -> client -> policy -> home/car

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -246,7 +246,8 @@ cursor: pointer;
   <a href="/dashboard.html">Dashboard</a>
   <a href="#contact">Contact</a>
   <a href="/login">Login</a>
-</div>
+  <a href="/logout">Logout</a>
+              </div>
           <br>     
         <fieldset>
           <legend></legend>
