-Cleaned up jquery for submitting to database
- Locked down dashboard page

--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -302,7 +302,7 @@ cursor: pointer;
               <div class="topnav">
   <a  href="index.html">Home</a>
   <a class="active" href="/dashboard.html">Dashboard</a>
-  <a href="/newpolicy.html">Contact</a>
+  <a href="newpolicy.html">Contact</a>
   <a href="/login">Login</a>
  <a href="/logout">Logout</a>
 
