--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -245,7 +245,7 @@ cursor: pointer;
               <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="/dashboard.html">Dashboard</a>
-  <a href="/newpolicy">Contact</a>
+  <a href="newpolicy.html">Contact</a>
   <a href="/login">Login</a>
   <a href="/logout">Logout</a>
               </div>
