--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -247,7 +247,7 @@ cursor: pointer;
         <br/>    
               <div class="topnav">
   <a class="active" href="index.html">Home</a>
-  <a href="/dashboard.html">Dashboard</a>
+  <a href="dashboard.html">Dashboard</a>
   <a href="newpolicy.html">Contact</a>
   <a href="/login">Login</a>
   <a href="/logout">Logout</a>
